samples/_failures_safe/1761005697_56e39f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e2a14ab.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_1e2a14ab.c:184:24: error: expected declaration or statement at end of input
  184 |                 struct GraphNode* neighbor = graph->edges[i]->target;
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_1e2a14ab.c:184:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e2a14ab.c:184:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e2a14ab.c:184:24: error: expected declaration or statement at end of input
